--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <meta name="description" content="HNV Property Management Solutions" />
+    <meta name="theme-color" content="#0f172a" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+    <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF">
     <title>HNV Property Management Solutions</title>
-    <base href="/" /> </head>
+    <base href="/" /> 
+  </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script> </body>
+    <script type="module" src="/src/main.tsx"></script> 
+  </body>
 </html>
