--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/logo-min.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <meta name="description" content="HNV Property Management Solutions" />
-    <meta name="theme-color" content="#0f172a" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-    <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF">
     <title>HNV Property Management Solutions</title>
-    <base href="/" /> 
+    <meta name="description" content="HNV Property Management Solutions" />
+    <meta name="theme-color" content="#3D52A0" />
+    <link rel="apple-touch-icon" href="/logo-min.png" sizes="180x180">
   </head>
   <body>
     <div id="root"></div>
