--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="HNV Property Management Solutions" />
     <meta name="theme-color" content="#3D52A0" />
     <link rel="apple-touch-icon" href="/logo-min.png" sizes="180x180">
+    <link rel="manifest" href="/manifest.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
