--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://accounts.google.com;">
+
+    <link rel="icon" type="image/png" href="/logo-min.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HNV SaaS Platform</title>
+    <title>HNV Property Management Solutions</title>
+    <meta name="description" content="HNV Property Management Solutions" />
+    <meta name="theme-color" content="#3D52A0" />
+    <link rel="apple-touch-icon" href="/logo-min.png" sizes="180x180">
+    <link rel="manifest" href="/manifest.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script> 
   </body>
 </html>
