--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,7 @@
     <meta name="theme-color" content="#3D52A0" />
     <link rel="apple-touch-icon" href="/logo-min.png" sizes="180x180">
     <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="preload" as="image" href="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?q=80&w=2070&auto=format&fit=crop">
   </head>
   <body>
     <div id="root"></div>
