--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     
+    <!-- SOLUTION: Updated Content-Security-Policy to allow Google's domains -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://accounts.google.com; style-src 'self' 'unsafe-inline' https://accounts.google.com;">
 
     <link rel="icon" type="image/png" href="/logo-min.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HNV Property Management Solutions</title>
     <meta name="description" content="HNV Property Management Solutions" />
-    <meta name="theme-color" content="#3D52A0" />
+    <meta name="theme-color" content="#212A31" />
     <link rel="apple-touch-icon" href="/logo-min.png" sizes="180x180">
     <link rel="manifest" href="/manifest.webmanifest" />
   </head>
