--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     
-    <!-- Updated CSP to allow API connections and other necessary resources -->
-    <meta http-equiv="Content-Security-Policy" content="
-      default-src 'self';
-      connect-src 'self' https://hnv.onrender.com https://accounts.google.com;
-      script-src 'self' 'unsafe-inline' https://accounts.google.com;
-      style-src 'self' 'unsafe-inline' https://accounts.google.com;
-      img-src 'self' data: https:;
-      font-src 'self' data:;
-    ">
+    <!-- SOLUTION: Updated Content-Security-Policy to allow Google's domains and fonts.googleapis.com -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://accounts.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://fonts.googleapis.com; img-src 'self' data: https://images.unsplash.com https://placehold.co https://drive.google.com; media-src 'self';">
 
     <link rel="icon" type="image/png" href="/logo-min.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
