--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     
+    <!-- FIXED: Comprehensive CSP that allows all necessary connections -->
     <meta http-equiv="Content-Security-Policy" content="
       default-src 'self'; 
       script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://apis.google.com; 
@@ -32,6 +33,7 @@
     <link rel="apple-touch-icon" href="/logo-min.png" sizes="180x180">
     <link rel="manifest" href="/manifest.webmanifest" />
     
+    <!-- Prevent zoom on input focus -->
     <style>
       @media screen and (max-width: 768px) {
         input, select, textarea {
