--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,24 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     
-    <!-- FIXED: Comprehensive CSP that allows all necessary connections -->
-    <meta http-equiv="Content-Security-Policy" content="
-      default-src 'self'; 
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://apis.google.com; 
-      style-src 'self' 'unsafe-inline' https://accounts.google.com https://fonts.googleapis.com; 
-      font-src 'self' https://fonts.gstatic.com;
-      img-src 'self' data: https: http: blob:;
-      connect-src 'self' 
-        https://hnv.onrender.com 
-        http://localhost:5001 
-        https://accounts.google.com 
-        https://www.googleapis.com
-        https://api.exchangerate-api.com
-        wss: ws:;
-      frame-src 'self' https://accounts.google.com;
-      object-src 'none';
-      base-uri 'self';
-    ">
+    <!-- Enhanced CSP with all required domains -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://hnv.onrender.com http://localhost:5001 https://accounts.google.com https://www.googleapis.com https://api.exchangerate-api.com https://ipapi.co; frame-src 'self' https://accounts.google.com; object-src 'none'; base-uri 'self';">
 
     <link rel="icon" type="image/png" href="/logo-min.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
