--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,39 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://hnv.onrender.com http://localhost:5001 https://accounts.google.com https://www.googleapis.com https://api.exchangerate-api.com https://ipapi.co; frame-src 'self' https://accounts.google.com; object-src 'none'; base-uri 'self';">
+    <!-- SOLUTION: Updated Content-Security-Policy to allow Google's domains and fonts.googleapis.com -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://accounts.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://fonts.googleapis.com; img-src 'self' data: https://images.unsplash.com https://placehold.co https://drive.google.com; media-src 'self';">
 
     <link rel="icon" type="image/png" href="/logo-min.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="HNV">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HNV Property Management Solutions</title>
     <meta name="description" content="HNV Property Management Solutions" />
-    <meta name="theme-color" content="#4A69E2" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-    <link rel="apple-touch-startup-image" href="/pwa-512x512.png">
+    <meta name="theme-color" content="#212A31" />
+    <link rel="apple-touch-icon" href="/logo-min.png" sizes="180x180">
     <link rel="manifest" href="/manifest.webmanifest" />
-    
-    <style>
-      @media screen and (max-width: 768px) {
-        input, select, textarea {
-          font-size: 16px !important;
-        }
-        /* iOS native app feel */
-        body {
-          -webkit-user-select: none;
-          -webkit-touch-callout: none;
-          -webkit-tap-highlight-color: transparent;
-        }
-        /* Prevent bounce scrolling */
-        html, body {
-          overscroll-behavior: none;
-        }
-      }
-    </style>
   </head>
   <body>
     <div id="root"></div>
