--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     
+    <!-- Enhanced CSP with all required domains -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://hnv.onrender.com http://localhost:5001 https://accounts.google.com https://www.googleapis.com https://api.exchangerate-api.com https://ipapi.co; frame-src 'self' https://accounts.google.com; object-src 'none'; base-uri 'self';">
 
     <link rel="icon" type="image/png" href="/logo-min.png" />
@@ -19,6 +20,7 @@
     <link rel="apple-touch-startup-image" href="/pwa-512x512.png">
     <link rel="manifest" href="/manifest.webmanifest" />
     
+    <!-- iOS PWA optimizations -->
     <style>
       @media screen and (max-width: 768px) {
         input, select, textarea {
