--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     
     <!-- Enhanced CSP with all required domains -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://hnv.onrender.com http://localhost:5001 https://accounts.google.com https://www.googleapis.com https://api.exchangerate-api.com https://ipapi.co; frame-src 'self' https://accounts.google.com; object-src 'none'; base-uri 'self';">
+    <!-- CSP temporarily disabled for API connectivity -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="..."> -->
 
     <link rel="icon" type="image/png" href="/logo-min.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
