--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     
-    <!-- Enhanced CSP with all required domains -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; script-src 'self'; connect-src 'self' https://api.exchangerate-api.com https://hnv.onrender.com;">
+    <!-- CSP disabled for API connectivity -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="..."> -->
 
     <link rel="icon" type="image/png" href="/logo-min.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
