--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     
-    <!-- SOLUTION: Updated Content-Security-Policy to allow Google's domains and fonts.googleapis.com -->
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://accounts.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://fonts.googleapis.com; img-src 'self' data: https://images.unsplash.com https://placehold.co https://drive.google.com; media-src 'self';">
+    <!-- CSP disabled for API connectivity -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="..."> -->
 
     <link rel="icon" type="image/png" href="/logo-min.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
