--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     
-    <!-- CSP disabled for API connectivity -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="..."> -->
+    <!-- Content Security Policy with API connectivity -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://hnv.onrender.com https://api.exchangerate-api.com https://fonts.googleapis.com https://fonts.gstatic.com; frame-src 'none'; object-src 'none'; base-uri 'self'; form-action 'self';">
 
     <link rel="icon" type="image/png" href="/logo-min.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
